Closed Bug 1599296 Opened 6 years ago Closed 6 years ago

Image inside <svg:image> should not be draggable

Categories

(Core :: SVG, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: xidorn, Assigned: longsonr)

References

Details

Attachments

(2 files)

Attached file testcase

See the attached testcase, there is an <image> element inside an <svg> element.

That image shouldn't be draggable. I'm not sure whether there is any spec about that, but I'm suspecting whether dragging should be support at all for SVG elements.

Anyway, there is no draggable attribute defined for SVG elements because it's an HTML global attribute, so there is effectively no way to control this behavior (and Firefox doesn't respect draggable on image anyway, see bug 1376369).

Priority: -- → P3
Assignee: nobody → longsonr
Pushed by longsonr@gmail.com: https://hg.mozilla.org/integration/autoland/rev/27b92ff71cc1 SVG images and links should not be draggable r=dholbert
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
QA Whiteboard: [good first verify]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: