Bug 1599296 - SVG images and links should not be draggable r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D55385